# ArtificiallyUnintelligent

./: .gitignore  README.md  context.md  diag_arm.py  progress.md  setup_guide.md  setup_guide_part2.md
challenge/: OptionB.docx  WorkshopLaptopRequirements.docx
dataset_v1/: README.md  classes.txt
discord_watcher/: README.md  complete_login.py  notif_listener.py  run_complete_login.bat  run_listener.bat  run_login.bat  run_poll.bat  run_scrape.bat  run_server.bat  server.py  watcher.py
docs/: LINKEDIN_POST_DRAFT.md  _config.yml  architecture.md  c1-mapping.md  c2-swarm.md  engineering.md  index.md  principles.md
dumpcontext/: 00_INDEX.md  01_NOW.md  02_REMAINING_PLAN.md  03_KEY_FACTS.md  04_INTEGRATION_COMPLETE.md  05_POST_CALL_STATUS.md  06_REVIEW_AND_HANDOFF.md  07_VENUE_READY.md  08_FINALS_T-5_FULL_SCOPE.md
guides/: vm_from_zero_to_flight.md
info_2026-05-21/: RoboVerse_2026_Qualifier.txt
pastproject/remote_laptop_src/: CMakeLists.txt  flywheel_node.py  package.xml  setup.cfg  setup.py
pastproject/remote_laptop_src/launch/: global_bringup.py  global_controller_bringup.py  nav2_bringup.py
pastproject/remote_laptop_src/nodes/: dump.txt  global_controller.py  map.txt
pastproject/remote_laptop_src/param/: burger.yaml
pastproject/turtlebot3_src/turtlebot3/turtlebot3_flywheels_and_temp/: package.xml  setup.cfg  setup.py
pastproject/turtlebot3_src/turtlebot3/turtlebot3_flywheels_and_temp/launch/: bringup.launch.py
pastproject/turtlebot3_src/turtlebot3/turtlebot3_flywheels_and_temp/turtlebot3_flywheels_and_temp/: amg8833_publisher.py  flywheel_node.py
(+422 files in other folders)
