<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_flywheels_and_temp</name>
  <version>0.0.1</version>
  <description>Example bringup for flywheels and AMG8833 temperature sensor</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
